# lime_tbx

./: .buildinfo  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOIME.spec  MANIFEST.in  README.md  README.rst  conftest.py  coverage_run.sh  genindex.html  index.html  index_pdf.html  lime_tbx.spec  log_20221116.txt  main.spec  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run.py  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree  index_pdf.doctree
.doctrees/content/: CHANGELOG.doctree  CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  analysis.doctree  design.doctree  glossary.doctree  implementation.doctree  readme.doctree  tex_introduction.doctree
.github/ISSUE_TEMPLATE/: BUG-REPORT.yaml  FEATURE-REQUEST.yaml  bug_report.md  feature_request.md
.github/halted_workflows/: README.txt  dev-test.yml  docs_pdf.yml  full-test.yml  lint.yml
.github/workflows/: ci-pipeline.yaml  dev-test.yml  docs_html.yml  docs_pdf.yml  full-test.yml
_modules/: index.html
_sources/: index_pdf.rst.txt
_sources/content/: glossary.md.txt  implementation.md.txt
_static/: documentation_options.js
c_scripts/: read_gsics_moon.h
coeff_data/: coefficients_server.txt  interp_settings.yml  interpolated_model_fwhm.csv  list.txt  listv.txt
coeff_data/versions/: 23_01_01.csv  LIME_MODEL_COEFS_20221201_V01.nc  LIME_MODEL_COEFS_20230414_V01.nc  LIME_MODEL_COEFS_20231116_V01.nc  LIME_MODEL_COEFS_20231120_V01.nc  LIME_MODEL_COEFS_20231120_V02.nc  LIME_MODEL_COEFS_20250501_V01.nc  LIME_MODEL_COEFS_20250519_V01.nc  LIME_MODEL_COEFS_20250608_V01.nc  LIME_MODEL_COEFS_20251010_V01.nc
content/: CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  analysis.html  design.html  glossary.html  implementation.html  readme.html  tex_introduction.html
content/api/: lime_tbx.application.coefficients.access_data.html  lime_tbx.application.coefficients.html  lime_tbx.application.coefficients.update.html  lime_tbx.application.filedata.coefficients.html  lime_tbx.application.filedata.csv.html  lime_tbx.application.filedata.html  lime_tbx.application.filedata.lglod.html  lime_tbx.application.filedata.lglod_factory.html  lime_tbx.application.filedata.moon.html  lime_tbx.application.filedata.netcdfcommon.html  lime_tbx.application.filedata.srf.html  lime_tbx.application.html  lime_tbx.application.simulation.comparison.comparison.html  lime_tbx.application.simulation.comparison.html  lime_tbx.application.simulation.comparison.utils.html  lime_tbx.application.simulation.html  lime_tbx.application.simulation.lime_simulation.html  (+55 more)
deployment/: Dockerfile  Linux.Dockerfile  Windows.Dockerfile  ubuntu_build_script.sh  windows_build_script.bat  windows_nmake.bat
docs/: Makefile  conf.py  index.rst  make.bat  shift_fig_numbers.py
eocfi_data/: esa_sat_list.yml  metadata.yml
installer/: .gitignore  README.rst  build_linux_installer.sh  build_mac_installer.sh
lime_tbx/: __init__.py  __main__.py  _version.py  main.py
quality_documentation/: lime_tbx_QF-59.docx
sample_data/: W_XX-EUMETSAT-Darmstadt_VIS+IR+SRF_MSG1+SEVIRI_C_EUMG.nc  W_XX-EUMETSAT-Darmstadt_VIS+IR+SRF_MSG4+SEVIRI_C_EUMG.nc
(+796 files in other folders)
